--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 /data_*/
 /data-test*/
 
+# Results outputs
+/results/
+
 # Jupyter
 .ipynb_checkpoints/
 
@@ -19,3 +22,4 @@ Thumbs.db
 
 # Embedded repos
 npm-leaderboard/
+
