Türkçe UTF-8 index.html ve paper/main.tex; README güncellendi; LaTeX .gitignore eklendi; results/ sunumu eklendi.

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,10 @@ Thumbs.db
 # Embedded repos
 npm-leaderboard/
 
+# LaTeX artifacts
+paper/*.aux
+paper/*.log
+paper/*.out
+paper/*.toc
+paper/*.synctex.gz
 
